--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "https://jsonplaceholder.typicode.com"
+
 }
