--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "material-ui-icons": "^1.0.0-beta.17",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "typeface-roboto": "0.0.45"
   },
   "scripts": {
